fixed sorting visualization, added speed control

--- a/src/components/BarSort/BarSort.css
+++ b/src/components/BarSort/BarSort.css
@@ -49,3 +49,8 @@
     align-content: center;
     margin:auto;
 }
+.speedControl {
+    width: 50%;
+    display: inline-block;
+    direction: rtl;
+}
