fixed BFS animation colors and speed

--- a/src/components/PathGrid/Node/Node.css
+++ b/src/components/PathGrid/Node/Node.css
@@ -17,4 +17,11 @@
   .visited-node {
     background-color: blue;
   }
+
+  .animate-one-node {
+    background-color: purple;
+  }
   
+  .animate-two-node {
+    background-color: darkblue;
+  }
